--- a/src/components/pages/TermsAndConditions/TermsAndConditions.module.css
+++ b/src/components/pages/TermsAndConditions/TermsAndConditions.module.css
@@ -30,7 +30,7 @@
 
     display: flex;
     flex-direction: column;
-    justify-content: start;
+    justify-content: flex-start;
 
 
     padding: 6rem 6rem 0rem 6rem;
@@ -99,7 +99,7 @@
     box-sizing: border-box;
     display: flex;
     flex-direction: column;
-    justify-content: start;
+    justify-content: flex-start;
 }
 
 .document:hover  {
@@ -223,7 +223,7 @@
     }
     .document_container {
         padding: 4rem 2rem;
-        justify-content: start;
+        justify-content: flex-start;
     }
 
 }
