--- a/src/components/pages/home/News/NewsArticles/NewsArticles.module.css
+++ b/src/components/pages/home/News/NewsArticles/NewsArticles.module.css
@@ -7,7 +7,7 @@
 .news_articles_container {
     display: flex;
     flex-direction: row;
-    justify-content: start;
+    justify-content: flex-start;
     column-gap: 5rem;
     row-gap: 5rem;
     width: 100%;
